Fix card bug on Firefox
remove required attribute which cause red border
fix height bug

--- a/src/app/quiz/quiz.component.scss
+++ b/src/app/quiz/quiz.component.scss
@@ -31,7 +31,6 @@ $scale: 0.05;
         display: flex;
         justify-content: flex-end;
         flex-direction: column;
-        height: 100%;
         padding: 40px 40px 20px;
         background: #ecf0f1;
       }
